# StoryLidChagodaChagodoscha2015

./: .gitignore  CMakeLists.txt  README.md  bibliography.bib  chapter1.tex  chapter10.tex  chapter11.tex  chapter12.tex  chapter13.tex  chapter15.tex  chapter2.tex  chapter3.tex  chapter4.tex  chapter5.tex  chapter6.tex  chapter7.tex  chapter8.tex  chapter9.tex  lastpage.tex  main.tex  main.xmpdata  titlepage.tex  typograph.tex
лидь2015/: аннотация.tex  байдарка.tex  возвращение.tex  вторая_дневка.tex  дозаправка_в_чагоде.tex  долгий_переход.tex  досрочный_антистапель.tex  заброска.tex  заключение.tex  кабаны_и_удача.tex  катастрофа.tex  маршрут_и_сборы.tex  несколько_слов_о_сплавах.tex  отъезд.tex  первая_дневка.tex  фонтан.tex
